data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1240.wast
;; 1. **Test Description:**    - Import a function from a different module that contains a `block` with a `br` instruction targeting a label.    - Verify that calling this imported function correctly respects the block structure and doesn’t cause stack corruption.    - **Constraint:** Ensure that the label indexing and operand stack management are handled correctly across module boundaries.

(assert_invalid
  (module
    (import "env" "imported_func" (func $imported_func (result i32)))
    (func $test_func
      (block (result i32)
        call $imported_func
        br 0
      )
    )
  )
  "label index out of bounds"
)